5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/225/users/3512/executions/1756_1183.log
== TEST (2019-05-28 21:02:03) 
-- CODE:
from numpy import *

anderson= array(eval(input("elemetary: ")))
cont = 0
var = {}

while ( cont < size(anderson)):
	if(anderson[cont] >= 0):
		var.append(anderson[cont])
	cont = cont + 1 
	
print(str(var)replace(',', ''))
-- ERROR:
File "XXXX", line 12
    print(str(var)replace(',', ''))
                        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-28 21:02:21) 
-- CODE:
from numpy import *

anderson= array(eval(input("elemetary: ")))
cont = 0
var = []

while ( cont < size(anderson)):
	if(anderson[cont] >= 0):
		var.append(anderson[cont])
	cont = cont + 1 
	
print(str(var)replace(',', ''))
-- ERROR:
File "XXXX", line 12
    print(str(var)replace(',', ''))
                        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-28 21:02:34) 
-- CODE:
from numpy import *

anderson= array(eval(input("elemetary: ")))
cont = 0
var = []

while ( cont < size(anderson)):
	if(anderson[cont] >= 0):
		var.append(anderson[cont])
	cont = cont + 1 
	
print(str(var).replace(',', ''))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-28 21:02:41) 
-- CODE:
from numpy import *

anderson= array(eval(input("elemetary: ")))
cont = 0
var = []

while ( cont < size(anderson)):
	if(anderson[cont] >= 0):
		var.append(anderson[cont])
	cont = cont + 1 
	
print(str(var).replace(',', ''))
-- EXECUTION TIME:
0.562409
-- TEST CASE 1:
---- input:
[-1,-2,-3,-4,-5,-6,-7,-8,-9,-10,1]
---- correct output:
[1]
---- user output:
[1]
-- TEST CASE 2:
---- input:
[2,-1,3,-4,5]
---- correct output:
[2 3 5]
---- user output:
[2 3 5]
-- TEST CASE 3:
---- input:
[-1,18,32,14,25,-6]
---- correct output:
[18 32 14 25]
---- user output:
[18 32 14 25]
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
